# MSCKF-VIG_sim

./: .gitignore  CMakeLists.txt  README.md
Product/Result/vig_sim/: MSC_NavError.txt  MSC_NavInfo.txt
data/: GPS_XYZ.txt  IMUinc.txt  ImageTimestamps.txt  VG_XYZ.txt
data/Frame_Features/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  (+2341 more)
exec/: mscnav.cc
include/camera/: data.hpp  feature.hpp  msckf.hpp
include/data/: navgnss.h
include/filter/: navfilter.h
include/imu/: navinitialized.h
include/process/: navstate.h
src/camera/: imageprocess.cc  msckf.cc
src/data/: navcamera.cc  navgnss.cc  navimu.cc
src/filter/: navfilter.cc
src/imu/: navinitialized.cc  navmech.cc
src/process/: navstate.cc
submodules/tools/: .gitignore  CMakeLists.txt  README.md
submodules/tools/include/: constant.hpp  navattitude.hpp  navbase.hpp  navconfig.hpp  navearth.hpp  navlog.hpp  navstruct.hpp  navtime.h
submodules/tools/src/: navattitude.cc  navbase.cc  navconfig.cc  navearth.cc  navtime.cc
submodules/tools/test/: CMakeLists.txt  NavAttitude.cc  NavTime.cc
tools/: RawImuToImuData.cc  picture_preprocess.cc
